tests/reference/asr-test_dict_key2-18ea6fb.stderr
semantic error: unhashable type: 'dict'
 --> tests/errors/test_dict_key2.py:4:43
  |
4 |     my_dict: dict[dict[i32, str], str] = {{1: "a", 2: "b"}: "first", {3: "c", 4: "d"}: "second"}
  |                                           ^^^^^^^^^^^^^^^^ 
